# solana-experiments

./: Cargo.toml  README.md
account-data-alignment/: Cargo.toml  README.md
account-data-alignment/src/: lib.rs
account-data-alignment/tests/: test_main.rs
cpi-by-ref/: Cargo.toml  README.md
cpi-by-ref/by-ref/: Cargo.toml
cpi-by-ref/by-ref/src/: lib.rs
cpi-by-ref/normal/: Cargo.toml
cpi-by-ref/normal/src/: lib.rs
cpi-by-ref/src/: lib.rs
cpi-by-ref/test/: Cargo.toml
cpi-by-ref/test/src/: lib.rs
cpi-by-ref/test/tests/: main.rs
cpi-by-ref/tests/: main.rs
hot-potato/: Cargo.toml  README.md
hot-potato/program/: Cargo.toml
hot-potato/program/src/: instructions.rs  pda.rs  processor.rs
hot-potato/program/tests/: main_test.rs
hot-potato/src/: instructions.rs  lib.rs  processor.rs
hot-potato/tests/: main_test.rs
mutim-cpi/: Cargo.toml  README.md  rust-toolchain.toml
mutim-cpi/src/: lib.rs
mutim-cpi/tests/: main_test.rs
pub-priv/: README.md
pub-priv/priv-program/: Cargo.toml
pub-priv/priv-program/src/: lib.rs
pub-priv/pub-program/: Cargo.toml
pub-priv/pub-program/src/: lib.rs
pubkey-cmp/: README.md
pubkey-cmp/normal/: Cargo.toml
pubkey-cmp/normal/src/: lib.rs
pubkey-cmp/syscall/: Cargo.toml
pubkey-cmp/syscall/src/: lib.rs
pubkey-cmp/test/: Cargo.toml
pubkey-cmp/test/tests/: main.rs
top-level-return-data/: Cargo.toml  README.md
top-level-return-data/getter/: Cargo.toml
top-level-return-data/getter/src/: lib.rs  processor.rs
top-level-return-data/setter/: Cargo.toml
top-level-return-data/setter/src/: entrypoint.rs  lib.rs  processor.rs
top-level-return-data/test/: Cargo.toml
top-level-return-data/test/tests/: main_test.rs
