[package]
name = "account-data-alignment"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = "^0.10"
bytemuck = "^1.0"
solana-program = "~1.16" # bpf .so programtest fails with `Failed to create BPF VM: syscall #XXX not registered before bind` on 1.14 (both tools and lib)

[dev-dependencies]
solana-program-test = "~1.16"
solana-sdk = "~1.16"
tokio = "^1"
