[package]
name = "account-data-alignment"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
ahash = { workspace = true } # https://github.com/solana-labs/solana/issues/34609, just need 1 package to specify this to lock workspace ahash version
borsh = { workspace = true }
bytemuck = { workspace = true }
solana-program = { workspace = true }

[dev-dependencies]
solana-program-test = { workspace = true }
solana-sdk ={ workspace = true }
tokio = { workspace = true }
