[package]
name = "hot-potato"
version = "0.0.0"
license = "Apache-2.0"
edition = "2018" # follows SPL

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
borsh = "^0.10"
getrandom = { version = "0.2.9", features = ["custom"] } # idk when this started, prolly when zk and crypto were introduced as deps to solana-program
solana-program = "1.16.0"

[dev-dependencies]
solana-program-test = "1.16.0"
solana-sdk = "1.16.0"
tokio = "1.14.0"

[lib]
crate-type = ["cdylib", "lib"]
