[package]
name = "mutim-cpi"
version = "0.0.0"
license = "Apache-2.0"
edition = "2021"

[dev-dependencies]
borsh = { workspace = true }
solana-program = { workspace = true }
solana-program-test = { workspace = true }
solana-sdk = { workspace = true }
tokio = { workspace = true }


[lib]
crate-type = ["cdylib", "lib"]
