[package]
name = "hot-potato"
version = "0.0.0"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
borsh = { workspace = true }
solana-program = { workspace = true }

[dev-dependencies]
solana-program-test = { workspace = true }
solana-sdk = { workspace = true }
tokio = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]
